# badstd

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  compile_commands.json  pyproject.toml
badstd/: BUILD  fib_tree.h  instance_counter.cc  instance_counter.h  ip.h  ring_buffer_queue.h  shared_ptr.h  stlout.h  string.h  topological_sort.h  unique_ptr.h
badstd/tests/: fib_tree_test.cpp  shared_ptr_test.cpp  split_test.cpp  topological_sort_test.cpp
cmd/: BUILD  main.cpp
hftbox/: BUILD
hftbox/fix/: Frame.h
hftbox/orders/: MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.h  Price.h  TransactionRouter.h
scripts/: bazel_log.sh  install_bazel.sh  install_buildifier.sh  install_clang.sh
