[tool.poetry]
name = "hftbox"
version = "0.1.0"
description = ""
authors = ["baranyildirim <baran.yildirim@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
cpplint = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
